# lab_oop_5

./: CMakeLists.txt  allocator.hpp  main.cpp  test.cpp
